--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,6 @@
   <modules>
   	<module>calculadora</module>
   	<module>palabrasrepetidas</module>
+  	<module>RomanNumbers</module>
   </modules>
 </project>
