added pangram kata, version 1

--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
   	<module>calculadora</module>
   	<module>palabrasrepetidas</module>
   	<module>RomanNumbers</module>
+      <module>Pangram</module>
   </modules>
 </project>
